--- a/MxltoMidi/templates/home.html
+++ b/MxltoMidi/templates/home.html
@@ -9,35 +9,43 @@
     <title>Document</title>  
     {% tailwind_css %}
 </head>
-<body>
-
-    <div class="w-ful p-4 h-auto bg-gray-900 text-green-700 ">
+<div class="w-full p-4 h-auto bg-gray-900 border-b text-green-700 ">
         <section class="text-left absolute">
         <button class="left-0 font-extrabold text-3xl">M<sup>3</sup></button>
     </section>
         <section class="text-right">
         <button class="mr-2 p-2 font-bold rounded-sm hover:bg-gray-950" onclick="window.location.href='upload'">Upload</button>
-        <button class="mr-2 p-2 font-bold rounded-sm hover:bg-gray-950" onclick="window.location.href='download'">Download</button>
+        <button class="mr-2 p-2 font-bold rounded-sm hover:bg-gray-950" onclick="window.location.href='download'">Other</button>
         <button class="mr-2 p-2 font-bold rounded-sm hover:bg-gray-950" onclick="window.location.href='about'">About</button>
         </section>
     </div>
-
+<body class="overflow-x-hidden">
 
     {% block body %}
-    <div class="flex justify-center">
-        <input class="rounded-sm border-none w-1/4 ml-2 border-2 mr-1 mt-2" placeholder="Find a song..."><label class="mt-2 h-3"><button class="bg-green-700 p-2 rounded-sm hover:bg-green-600 h-auto text-white font-bold">Search</button></label>
+    <div class="flex flex-nowrap  mt-20 gap-10 w-screen p-10">
+    <div class="shadow-lg border w-1/2 rounded-md p-10 text-center">
+    <h1 class="text-5xl font-bold text-slate-500">Upload</h1>
+        <form method="POST" class="m-10"  enctype= multipart/form-data>
+            {% csrf_token %}
+            {{ form.as_p }}
+        <button class="bg-gray-900 rounded-lg p-3 border shadow-md hover:bg-green-700 transition-all duration-300 text-white font-bold m-8" onclick="change()">Submit</button>
+        </form>
     </div>
-    <div class="flex justify-center mt-20 text-lg text-center">
-    <section>
-        <h1>Welcome to mxl to midi to mp4</h1>
 
-        <a>Convert your mxl files to mp4 files</a>
-        <div>
-        <a>Converted {{file_count}} files!</a>
+        <div class="shadow-lg border w-1/2 rounded-md p-10 text-center items-center">
+         <h1 id="text" class="text-5xl font-bold text-green-700">Download</h1>
+         <p class="font-bold text-green-700">{{ filename_mp4 }}</p>
+            <video controls class="rounded-lg shadow-lg justify-self-center mt-4">
+            <source src="{{ filename_mp4 }}" type="video/mp4"></source>
+        </video><br>
+        {% if filename_mp4 %}
+        <a class="text-green-700 no-underline hover:underline" href="media/{{ filename_mp4 }}">Download</a>
+        {% endif %}
+        <p class="">Upload a file and submit it for conversion!</p>
         </div>
-       
-    </section>
-    </div>
+</div>
+</body>
+</html>
 </body>
 {% endblock %}
 </html>
